network-policy/base/policies/bmc-reverse-proxy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-bmc-allow
  namespace: bmc-reverse-proxy
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: bmc-reverse-proxy
  egress:
  - toCIDR:
    - 10.72.16.0/20
    - 10.76.16.0/20
    - 10.78.16.0/20
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
    - ports:
      - port: "5900"
        protocol: TCP
