network-policy/base/policies/customer-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-squid
  namespace: customer-egress
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: squid
  egressDeny:
  - toEntities:
    - cluster
  - toCIDR:
    - 10.0.0.0/8
    - 172.16.0.0/12
    - 192.168.0.0/16
