network-policy/base/policies/domestic-egress.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: network-nat
  namespace: domestic-egress
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 100.0
  selector: app.kubernetes.io/component == 'egress' && app.kubernetes.io/instance == 'network-nat' && app.kubernetes.io/name == 'coil'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: UDP
      source:
        namespaceSelector: team == 'network'
      destination:
        ports:
          - 5555
    - action: Deny
  egress:
    - action: Allow
      destination:
        selector: role == 'switch'
