network-policy/base/policies/hubble-relay.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-hubble-relay-node-allow
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchLabels:
      k8s:k8s-app: hubble-relay
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "4244"
        protocol: TCP
