network-policy/base/policies/monitoring.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: app.kubernetes.io/name == 'vmagent'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 7472
          - 8200
          - 9093
          - 9100
          - 9105
          - 9384
          - 9386
          - 10081
          - 10180
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus-etcd-metrics-allow
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: app.kubernetes.io/name == 'vmagent'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 2381
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus-calico-node-metrics-allow
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: app.kubernetes.io/name == 'vmagent'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 9091
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus-kube-proxy-metrics-allow
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: app.kubernetes.io/name == 'vmagent'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 10249
