network-policy/base/policies/pvc-autoresizer.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-same-ns-allow
  namespace: pvc-autoresizer
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: pvc-autoresizer
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-pvc-autoresizer-allow
  namespace: pvc-autoresizer
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: pvc-autoresizer
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
