network-policy/base/policies/teleport.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-teleport-proxy-node-allow
  namespace: teleport
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: teleport
      k8s:app.kubernetes.io/component: proxy
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "3022"
        protocol: TCP
  - toCIDR:
    # Node network
    # CIDR based rule only applies to nodes outside the cluster including boot servers
    - 10.69.0.0/16
    toPorts:
    - ports:
      - port: "3022"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-teleport-auth-etcd-allow
  namespace: teleport
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: teleport
      k8s:app.kubernetes.io/component: auth
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "2379"
        protocol: TCP
  - toCIDR:
    # Node network
    # CIDR based rule only applies to nodes outside the cluster including boot servers
    - 10.69.0.0/16
    toPorts:
    - ports:
      - port: "2379"
        protocol: TCP
---
# Temporary fix: This policy allow teleport apps to access teleport-proxy LB
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-teleport-app-allow
  namespace: teleport
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: teleport
      k8s:app.kubernetes.io/component: app
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
